now print letter if correct, and remembers if it was wrong

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Q">Q</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="R">R</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="S">S</button></li>
-                <li><button class="btn btn--stripe" id="letterBtn" type="button" value="T" disabled>T</button></li>
+                <li><button class="btn btn--stripe" id="letterBtn" type="button" value="T">T</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="U">U</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="V">V</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="W">W</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="X">X</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Y">Y</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Z">Z</button></li>
-                <li><button class="btn btn--stripe" id="letterBtn" type="bid" value="Å">Å</button></li>
+                <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Å">Å</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Ä">Ä</button></li>
                 <li><button class="btn btn--stripe" id="letterBtn" type="button" value="Ö">Ö</button></li>
             </ul>
