now diplays messages properly, and hides instructions during game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Uppgift 03 - Hangman</h1>
     </header>
     <main>
-        <article>
+        <article class="hideLater">
             <h2>Välkommen till spelet Hänga gubbe.</h2>
             <p>När du trycker på starta spelet, kommer datorn att välja ett ord slumpmässigt. <br/>
                Det kommer då dyka upp ett visst antal fält som motsvarar antalet bokstäver i ordet. <br/>
@@ -62,7 +62,7 @@
             <img id="hangman" src="/images/h0.png" alt="hangman">
         </section>
         <section id="message">
-            <!-- This is where messages should appear -->asd
+            <!-- This is where messages should appear -->
         </section>
         
     </main>
