added music and updated styling a bit, no mobile verision avalieble

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ fixa räknare för vinster/förluster -->
         </div>
         </header>
         <br />
+        <audio id="audio" src="/spelMusik.mp3" autoplay loop></audio>
         <header>
             
         <article class="hideLater">
